--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type=TRACE
+
+
+# liquibase
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
